src/main/inject/css/darkModeFixes.css
/* hide the arrow that cannot be inverted by DarkReader */
.MessageBubble .arrow.left svg {
    display: none !important;
}

.RecentMessageView > .items .item > .content .what,
.RecentMessageView > .items .item > .content .who,
.RecentMessageView > .items .item > .extra .when,
.MessageViewItem.bubble > div.body > div.whoWhatWhen > div.statusAndWhen > div.when,
.CustomFieldViewer .cell.key,
.Avatar > .texts > .title,
.InputBox > .TextArea .Editable:empty::before,
.MessageBubble .RecallView,
.TeamworkWebHeader > .organizerRegion > .moduleName,
.ContactableUserList .items .item .SimpleUserListItem .Avatar .title,
.ContactableGroupList .items .item .SimpleGroupListItem .Avatar .title,
.WelcomeView .contactListSummary, .WelcomeView .recentSummary,
.WelcomeView .head,
.GroupMemberPicker .items > .item .title,
.GroupMemberEditor .fieldHeads > .item > .people .Avatar .texts .title,
.GroupMemberEditor .items > .item > .people .Avatar .texts .title,
.GroupEditor .basicSection .sectionTitle,
.MessageBubble .FileView .DownloadableView .caption,
input::placeholder,
.GroupInfo .memberSection .MemberList .item .role,
.Searcher .modal-content .modal-body .result > .spliter
{
    color: #969696 !important;
}

.LeftBar > .ListView .items .ReactVirtualized__List .item {
    border-bottom-color: rgba(255, 255, 255, 0.1);
}

.ConversationView > .front > .NavigationBar {
    border-bottom-color: rgba(255, 255, 255, 0.1);
}

.LeftBar > .Switcher {
    border-top-color: rgba(255, 255, 255, 0.1);
}

.ConversationView > .front  {
    border-left-color: rgba(255, 255, 255, 0.1);
    border-right-color: rgba(255, 255, 255, 0.1);
}

.ChatView > .InputBox {
    border-top-color: rgba(255, 255, 255, 0.1);
}

.InputBox > .TextArea .Editable {
    border-top-color: rgba(255, 255, 255, 0.1);
    border-left-color: rgba(255, 255, 255, 0.1);
    border-right-color: rgba(255, 255, 255, 0.1);
    border-bottom-color: rgba(255, 255, 255, 0.1);
}

.LoadingIcon > div {
    color: #969696;
    background-color: #969696;
    border-color: #969696;
    outline-color: #969696;
}

/*More contrast Background color */
.ConversationView > .front > .ChatView {
    background-color: rgb(28, 31, 33);
}

.ConversationView > .front > .NavigationBar,
.ConversationView > .front > .NavigationBar + .WelcomeView {
    background-color: rgb(36, 39, 41);
}

.emoji-mart-dark .emoji-mart-category-label span {
    background-color: rgb(41, 44, 46);
}
.emoji-mart-dark {
    background-color: rgb(41, 44, 46);
}

.emoji-mart-dark .emoji-mart-search input {
    background-color: rgb(46, 49, 51);
}

#emoji-trigger {
    fill: #969696;
    stroke: #969696;
}

#emoji-trigger.hovered {
    fill: #7bb5f9;
    stroke: #7bb5f9;
}

